[package]
edition = "2021"
name = "ossm-rs"
rust-version = "1.86"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = [
    "esp32s3",
], git = "https://github.com/orange-gem/esp-hal.git" }
esp-hal = { version = "=1.0.0-rc.0", features = [
    "defmt",
    "esp32s3",
    "unstable",
], git = "https://github.com/orange-gem/esp-hal.git" }

esp-preempt = { features = [
    "esp32s3",
    "defmt",
], git = "https://github.com/orange-gem/esp-hal.git" }
esp-radio = { features = [
    "defmt",
    "esp-now",
    "unstable",
    "wifi",
    "esp32s3",
], git = "https://github.com/orange-gem/esp-hal.git" }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { features = [
    "defmt",
], git = "https://github.com/orange-gem/esp-hal.git" }
esp-backtrace = { features = [
    "println",
    "esp32s3",
    "panic-handler",
], git = "https://github.com/orange-gem/esp-hal.git" }
esp-println = { features = [
    "defmt-espflash",
    "esp32s3",
], git = "https://github.com/orange-gem/esp-hal.git" }
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
esp-hal-embassy = { version = "0.9.0", features = [
    "defmt",
    "esp32s3",
], git = "https://github.com/orange-gem/esp-hal.git" }
static_cell = "2.1.1"

heapless = "0.8.0"
zerocopy = { version = "0.8.27", features = ["derive"] }
portable-atomic = { version = "1.3", default-features = false, features = [
    "require-cas",
] }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }

rmodbus = { version = "0.10.2", default-features = false, features = [
    "heapless",
] }
enum-iterator = "2.1.0"

rsruckig = { default-features = false, features = [
    "libm",
    "alloc",
], git = "https://github.com/petrikosk/rsruckig.git" }

[features]
default= ["board_waveshare"]
board_custom = []
board_waveshare = []


[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
