[workspace]
resolver = "2"
members = ["xtask", "ossm-rs"]

[profile.release-embedded]
inherits = "release"
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false