[package]
name = "ossm-motion"
version = "0.1.0"
edition = "2024"

[dependencies]
# Used temporarily
defmt = "1.0.1"

critical-section = "1.2.0"
heapless = "0.9.2"
embassy-time = { version = "0.5.0", features = ["defmt"] }
portable-atomic = { version = "1.11.1", default-features = false, features = [
    "require-cas",
    "float",
] }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
enum_dispatch = "0.3.13"
fugit = "0.3.7"
rsruckig = { default-features = false, features = [
    "libm",
    "alloc",
], git = "https://github.com/petrikosk/rsruckig.git" }
