[package]
name = "ossm-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
ossm-motion = { path = "../ossm-motion" }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time"] }
# liveplot = { git = "https://github.com/ulikoehler/liveplot-rs.git" }
egui_plot = "0.34.0"

egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
embassy-time = {version = "0.5.0", features = ["std", "generic-queue-32"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
embassy-time = {version = "0.5.0", features = ["wasm", "generic-queue-32"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
